--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
 
   	<div class="hero bg-blue">&nbsp;</div>
 
-  	{% include header.html %}
+<!--  	{% include header.html %}-->
 
     <div class="post container max-width-2 px2">
     	<h1>{{ page.title }}</h1>
