--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
     <div class="clearfix">
       <div class="sm-col sm-col-6">
-        <p class="left-align mb2"><a href="{{ "/search" | prepend: site.baseurl}}">{{ site.translation[site.language].search }}</a>  | <a href="{{ "/blog" | prepend: site.baseurl}}">{{ site.translation[site.language].blog }}</a> | {{ site.translation[site.language].subscribe }} <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
+        <p class="left-align mb2"><a href="{{ "/search" | prepend: site.baseurl}}">{{ site.translation[site.language].search }}</a>   | {{ site.translation[site.language].subscribe }} <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
       </div>
     </div>
     
